# DSLR

./: CMakeLists.txt  Makefile  README.md  cc  trainer
resources/: .~lock.dataset_train.csv#  dataset_train.csv
sources/: Makefile  calculus.cpp  main.cpp  managment.cpp  predict.cpp  reader.cpp  trainer  trainer.cpp  trainer.h  utils.cpp  writer.cpp
